--- a/src/components/Search.module.css
+++ b/src/components/Search.module.css
@@ -25,7 +25,7 @@
   width: 350px;
   border-radius: 10px;
   padding: 5px 30px 5px 10px;
-  border: 1px solid white;
+  border: 1px solid grey;
 }
 
 .searchInput:focus,
